# 2022_2_Practical_dev

./: .clang-format  .env  .gitignore  CPPLINT.cfg  Dockerfile  Makefile  README.md  docker-compose.yml  run_format.sh  run_linters.sh  set_screen.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/client/cmd/: CMakeLists.txt  main.cpp
src/client/internal/: CMakeLists.txt
src/client/internal/fragments/: basefragment.cpp  basefragment.hpp  contestcreationfragment.cpp  contestcreationfragment.hpp  contestfragment.hpp  discussfragment.hpp  mainfragment.cpp  mainfragment.hpp  registerfragment.hpp  signinfragment.hpp  taskfragment.hpp
src/client/internal/include/: header.hpp  mainwindow.hpp
src/client/internal/navigator/: navigator.cpp  navigator.hpp
src/client/internal/network/: CMakeLists.txt
src/client/internal/network/include/: Contest.hpp  Distribute.hpp  Entity.hpp  IContestAPI.hpp  IParcelAPI.hpp  ITaskAPI.hpp  IUserAPI.hpp  ImplContestAPI.hpp  ImplParcelAPI.hpp  ImplTaskAPI.hpp  ImplUserAPI.hpp  Parcel.hpp  Task.hpp  User.hpp  requestDistributors.hpp  testing.hpp
src/client/internal/network/src/: Contest.cpp  Distribute.cpp  ImplContestAPI.cpp  ImplParcelAPI.cpp  ImplTaskAPI.cpp  ImplUserAPI.cpp  Parcel.cpp  Task.cpp  User.cpp  requestDistributors.cpp  testing.cpp
src/client/internal/network/tests/: CMakeLists.txt  tests.cpp
src/client/internal/resources/: fonts.qrc  images.qrc
src/client/internal/screensfactory/: screensfactory.hpp
src/client/internal/src/: header.cpp  main.cpp  mainwindow.cpp
src/client/internal/tests/: CMakeLists.txt
src/client/internal/tests/src/: main.cpp  navigator_test.cpp  screensfactory_test.cpp
src/client/internal/ui/: mainwindow.ui
src/client/internal/widgets/: basewidget.cpp  basewidget.hpp  commentitem.hpp  contestconfig.cpp  contestconfig.hpp  contestitem.hpp  contestslist.hpp  header.cpp  header.hpp  parcelslist.hpp  searchmenu.cpp  searchmenu.hpp  taskconfig.hpp  taskwidget.hpp
src/cmd/: CMakeLists.txt
src/cmd/server/: main.cpp
src/db/: CMakeLists.txt
src/db/include/: db.hpp
src/db/src/: db.cpp
src/db/tests/: CMakeLists.txt  test.cpp
src/internal/: CMakeLists.txt
src/server/: CMakeLists.txt  main.cpp
src/server/cmd/: CMakeLists.txt  checker.cpp  main.cpp
src/server/internal/: CMakeLists.txt
src/server/internal/codesources/: CMakeLists.txt
src/server/internal/codesources/include/: CodeSourceRepositoryImpl.hpp  RepositoryImpl.hpp
src/server/internal/codesources/src/: CodeSourceRepositoryImpl.cpp
src/server/internal/codesources/tests/: CMakeLists.txt  repository_test.cpp
src/server/internal/codesources/virtual/: CodeSourceRepository.hpp
src/server/internal/comments/: CMakeLists.txt  comments.hpp
src/server/internal/comments/include/: CommentRepositoryImpl.hpp  RepositoryImpl.hpp  delivery.hpp  service.hpp
src/server/internal/comments/src/: CommentRepositoryImpl.cpp
src/server/internal/comments/tests/: CMakeLists.txt  repository_test.cpp
src/server/internal/comments/virtual/: CommentRepository.hpp
src/server/internal/contests/: CMakeLists.txt  contests.hpp
src/server/internal/contests/include/: ContestRepositoryImpl.hpp  RepositoryImpl.hpp  delivery.hpp  service.hpp
src/server/internal/contests/src/: ContestRepositoryImpl.cpp
src/server/internal/contests/tests/: CMakeLists.txt  repository_test.cpp
src/server/internal/contests/virtual/: ContestRepository.hpp  Repository.cpp
src/server/internal/parcels/: CMakeLists.txt
src/server/internal/parcels/include/: ParcelRepositoryImpl.hpp  delivery.hpp  service.hpp
src/server/internal/parcels/src/: ParcelRepositoryImpl.cpp
src/server/internal/parcels/tests/: CMakeLists.txt  repository_test.cpp
src/server/internal/parcels/virtual/: ParcelRepository.hpp
src/server/internal/runconfigs/: CMakeLists.txt
src/server/internal/runconfigs/include/: RepositoryImpl.hpp  RunConfigRepositoryImpl.hpp
src/server/internal/runconfigs/src/: RunConfigRepositoryImpl.cpp
src/server/internal/runconfigs/tests/: CMakeLists.txt  repository_test.cpp
src/server/internal/runconfigs/virtual/: RunConfigsRepository.hpp
src/server/internal/src/: CMakeLists.txt
src/server/internal/src/acceptor/: CMakeLists.txt  acceptor.hpp
src/server/internal/src/acceptor/include/: acceptor.hpp
src/server/internal/src/acceptor/src/: acceptor.cpp
src/server/internal/src/acceptor/tests/: CMakeLists.txt
src/server/internal/src/acceptor/virtual/: acceptor_interface.hpp
src/server/internal/src/api/include/: api_handler.hpp
src/server/internal/src/checker/: CMakeLists.txt
src/server/internal/src/checker/include/: CheckerBuilder.hpp  CheckerImpl.hpp  (+4 more)
src/server/internal/src/connection/: CMakeLists.txt  connection.hpp
src/server/internal/src/connection_manager/: CMakeLists.txt  connection_manager.hpp
src/server/internal/src/db/: CMakeLists.txt
src/server/internal/src/entities/: CMakeLists.txt
src/server/internal/src/images/: CMakeLists.txt
src/server/internal/src/parser/: CMakeLists.txt  parser.hpp  parser_mock.hpp
src/server/internal/src/router/: CMakeLists.txt  router.hpp
src/server/internal/src/runner/: CMakeLists.txt
src/server/internal/src/server/: CMakeLists.txt  server.hpp  server_mock.hpp
src/server/internal/src/taskcreator/: CMakeLists.txt
src/server/internal/src/utils/: CMakeLists.txt  constants.hpp  namespaces.hpp
src/server/internal/tasks/: CMakeLists.txt  tasks.hpp
src/server/internal/tasks/include/: RepositoryImpl.hpp  TaskRepositoryImpl.hpp  delivery.hpp  service.hpp
src/server/internal/tasks/src/: TaskRepositoryImpl.cpp
src/server/internal/tasks/tests/: CMakeLists.txt  repository_test.cpp
src/server/internal/tasks/virtual/: TaskRepository.hpp
src/server/internal/users/: CMakeLists.txt
src/server/internal/users/include/: RepositoryImpl.hpp  UserRepositoryImpl.hpp  delivery.hpp  service.hpp
src/server/internal/users/src/: UserRepositoryImpl.cpp
src/server/internal/users/tests/: CMakeLists.txt  repository_test.cpp
src/server/internal/users/virtual/: Repository.hpp  UserRepository.hpp
(+88 files in other folders)
